Fix bug 91317: Klondike (draw 3) incorrect unwinnable game message

BUG: 91317

svn path=/trunk/kdegames/kpat/; revision=376179